Alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -629,7 +629,7 @@ footer .Email img{
   padding-bottom: 2.5rem;
   margin-left: auto;
   margin-right: auto;
-	resize: auto;
+	text-align: center;
 }
 
 .RooMateIntro p{
